--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
         .track_image{
             width: 0;
         }
+        img{
+            height: 8vh;
+        }
         .numbers{
             width: 10px;
         }
@@ -54,7 +57,7 @@
         <table>
             <tr>
                 <td class="numbers">1</td>
-                <td class="track_image"><img src="ab67616d0000b273691253f50c8d0c3a2d52363f.jpg" width="64vw" height="64vh" alt="bild"/></td>
+                <td class="track_image"><img src="ab67616d0000b273691253f50c8d0c3a2d52363f.jpg"  alt="bild"/></td>
                 <td>Bad ideas</td>
                 <td>Tessa Violet</td>
             </tr>
@@ -62,7 +65,7 @@
         <table>
             <tr>
                 <td class="numbers">1</td>
-                <td class="track_image"><img src="ab67616d0000b273691253f50c8d0c3a2d52363f.jpg" width="64vw" height="64vh" alt="bild"/></td>
+                <td class="track_image"><img src="ab67616d0000b273691253f50c8d0c3a2d52363f.jpg" alt="bild"/></td>
                 <td>Bad ideas</td>
                 <td>Tessa Violet</td>
             </tr>
