--- a/index.html
+++ b/index.html
@@ -37,14 +37,15 @@
                 width: 1000px;
             }
         }
-        .track_image{
-            width: 0;
-        }
         img{
             height: 8vh;
         }
-        .numbers{
-            width: 10px;
+        .centerInTable{
+            justify-content: center;
+            display: flex;
+        }
+        .takeUpAllSpace{
+            flex-basis: 100%;
         }
 
     </style>
@@ -55,19 +56,19 @@
 <div class="container">
     <div class="table">
         <table>
-            <tr>
-                <td class="numbers">1</td>
-                <td class="track_image"><img src="ab67616d0000b273691253f50c8d0c3a2d52363f.jpg"  alt="bild"/></td>
-                <td>Bad ideas</td>
-                <td>Tessa Violet</td>
+            <tr style="display: flex; justify-content: space-between;">
+                <td ><h1>1</h1></td>
+                <td><img src="ab67616d0000b273691253f50c8d0c3a2d52363f.jpg" alt="bild"/></td>
+                <td class="centerInTable takeUpAllSpace"><h2>Bad ideas</h2></td>
+                <td class="centerInTable takeUpAllSpace"><h2>Tessa Violet</h2></td>
             </tr>
         </table>
         <table>
-            <tr>
-                <td class="numbers">1</td>
-                <td class="track_image"><img src="ab67616d0000b273691253f50c8d0c3a2d52363f.jpg" alt="bild"/></td>
-                <td>Bad ideas</td>
-                <td>Tessa Violet</td>
+            <tr style="display: flex; justify-content: space-between;">
+                <td ><h1>1</h1></td>
+                <td><img src="ab67616d0000b273691253f50c8d0c3a2d52363f.jpg" alt="bild"/></td>
+                <td class="centerInTable takeUpAllSpace"><h2>Bad ideas</h2></td>
+                <td class="centerInTable takeUpAllSpace"><h2>Tessa Violet</h2></td>
             </tr>
         </table>
     </div>
