--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         }
         .centerInTable{
             justify-content: center;
+            align-content: center;
             display: flex;
         }
         .takeUpAllSpace{
@@ -52,7 +53,6 @@
 </head>
 <body>
 
-<h2>HTML Tablsdfsdfe</h2>
 <div class="container">
     <div class="table">
         <table>
