--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         }
         .centerInTable{
             justify-content: center;
-            align-content: center;
+            align-items: center;
             display: flex;
         }
         .takeUpAllSpace{
