--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
         }
         @media screen and (min-width: 320px) {
             .table{
-                width: 400px;
+                width: 90%;
             }
         }
         @media screen and (min-width: 680px) {
             .table{
-                width: 700px;
+                width: 90%;
             }
         }
         @media screen and (min-width: 1024px) {
             .table{
-                width: 1000px;
+                width: 800px;
             }
         }
         img{
