--- a/index.html
+++ b/index.html
@@ -14,10 +14,6 @@
             text-align: left;
             padding: 8px;
         }
-
-        tr:nth-child(even) {
-            background-color: #dddddd;
-        }
         .container{
             display: flex;
             justify-content: center; /* For horizontal alignment */
@@ -57,15 +53,49 @@
     <div class="table">
         <table>
             <tr style="display: flex; justify-content: space-between;">
-                <td ><h1>1</h1></td>
+                <td class="centerInTable"><h1>1</h1></td>
                 <td><img src="ab67616d0000b273691253f50c8d0c3a2d52363f.jpg" alt="bild"/></td>
                 <td class="centerInTable takeUpAllSpace"><h2>Bad ideas</h2></td>
                 <td class="centerInTable takeUpAllSpace"><h2>Tessa Violet</h2></td>
             </tr>
-        </table>
-        <table>
             <tr style="display: flex; justify-content: space-between;">
-                <td ><h1>1</h1></td>
+                <td class="centerInTable"><h1>1</h1></td>
+                <td><img src="ab67616d0000b273691253f50c8d0c3a2d52363f.jpg" alt="bild"/></td>
+                <td class="centerInTable takeUpAllSpace"><h2>Bad ideas</h2></td>
+                <td class="centerInTable takeUpAllSpace"><h2>Tessa Violet</h2></td>
+            </tr>
+            <tr style="display: flex; justify-content: space-between;">
+                <td class="centerInTable"><h1>1</h1></td>
+                <td><img src="ab67616d0000b273691253f50c8d0c3a2d52363f.jpg" alt="bild"/></td>
+                <td class="centerInTable takeUpAllSpace"><h2>Bad ideas</h2></td>
+                <td class="centerInTable takeUpAllSpace"><h2>Tessa Violet</h2></td>
+            </tr>
+            <tr style="display: flex; justify-content: space-between;">
+                <td class="centerInTable"><h1>1</h1></td>
+                <td><img src="ab67616d0000b273691253f50c8d0c3a2d52363f.jpg" alt="bild"/></td>
+                <td class="centerInTable takeUpAllSpace"><h2>Bad ideas</h2></td>
+                <td class="centerInTable takeUpAllSpace"><h2>Tessa Violet</h2></td>
+            </tr>
+            <tr style="display: flex; justify-content: space-between;">
+                <td class="centerInTable"><h1>1</h1></td>
+                <td><img src="ab67616d0000b273691253f50c8d0c3a2d52363f.jpg" alt="bild"/></td>
+                <td class="centerInTable takeUpAllSpace"><h2>Bad ideas</h2></td>
+                <td class="centerInTable takeUpAllSpace"><h2>Tessa Violet</h2></td>
+            </tr>
+            <tr style="display: flex; justify-content: space-between;">
+                <td class="centerInTable"><h1>1</h1></td>
+                <td><img src="ab67616d0000b273691253f50c8d0c3a2d52363f.jpg" alt="bild"/></td>
+                <td class="centerInTable takeUpAllSpace"><h2>Bad ideas</h2></td>
+                <td class="centerInTable takeUpAllSpace"><h2>Tessa Violet</h2></td>
+            </tr>
+            <tr style="display: flex; justify-content: space-between;">
+                <td class="centerInTable"><h1>1</h1></td>
+                <td><img src="ab67616d0000b273691253f50c8d0c3a2d52363f.jpg" alt="bild"/></td>
+                <td class="centerInTable takeUpAllSpace"><h2>Bad ideas</h2></td>
+                <td class="centerInTable takeUpAllSpace"><h2>Tessa Violet</h2></td>
+            </tr>
+            <tr style="display: flex; justify-content: space-between;">
+                <td class="centerInTable"><h1>1</h1></td>
                 <td><img src="ab67616d0000b273691253f50c8d0c3a2d52363f.jpg" alt="bild"/></td>
                 <td class="centerInTable takeUpAllSpace"><h2>Bad ideas</h2></td>
                 <td class="centerInTable takeUpAllSpace"><h2>Tessa Violet</h2></td>
